Fix typo in Changelog.ini

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -159,7 +159,7 @@ char.
 - Add MANIFEST.SKIP, Changelog.ini, Build.PL, META.json.
 - Add an FAQ to the docs.
 - Clean up the docs.
-- As of this version, maintanence is by Ron Savage.
+- As of this version, maintenance is by Ron Savage.
 EOT
 
 [V 2.14]
